--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,7 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile ('com.h2database:h2:1.0.60')
+	compile ('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.5.4')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
