added integration test for controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.datasource.url = jdbc:h2:mem:marryat-hotels-reservations
+spring.datasource.url = jdbc:h2:mem:marryat-hotels-reservations;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name = org.h2.Driver
